---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js

        debugger;
        // biome-ignore lint/performance/noDelete: <explanation>
        delete obj.prop;
    
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:2:9 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 2 │         debugger;
      │         ^^^^^^^^^
    3 │         // biome-ignore lint/performance/noDelete: <explanation>
    4 │         delete obj.prop;
  
  i Unsafe fix: Remove debugger statement
  
    1   │ - 
    2   │ - ········debugger;
      1 │ + 
    3 2 │           // biome-ignore lint/performance/noDelete: <explanation>
    4 3 │           delete obj.prop;
  

```

```block
Checked 1 file in <TIME>. No fixes needed.
Found 1 error.
```
